✨ Allow to manage secrets
