# server/src/sdk-secrets/dtos/list.sdk-secret.dto.ts
@@ -1,0 +1,10 @@
+import { PaginatedResponse } from '../../common/paginated.response';
+import { SanitizedSdkSecretDto } from './sanitized.sdk-secret.dto';
+export class ListSdkSecretDto
+  implements PaginatedResponse<SanitizedSdkSecretDto>
+{
+  items: SanitizedSdkSecretDto[];
+  resultCount: number;
+  hasMore: boolean;
+  totalCount: number;
+}
