# server/src/sdk-secrets/dtos/revoke.sdk-secret.dto.ts
@@ -1,0 +1,6 @@
+import { IsBoolean } from 'class-validator';
+
+export class RevokeSdkSecretDto {
+  @IsBoolean()
+  isRevoked: boolean;
+}
