# server/src/sdk-secrets/sdk-secrets.controller.ts
@@ -1,6 +1,9 @@
 import {
   Body,
   Controller,
+  Delete,
+  Get,
+  Param,
   Post,
   Req,
   UnauthorizedException,
@@ -15,6 +18,8 @@ import { UserAuthenticatedRequest } from '../iam/iam.types';
 import { TelemetryService } from '../telemetry/telemetry.service';
 import { CreateSdkSecretDto } from './dtos/create.sdk-secret.dto';
 import { CreatedSdkSecretDto } from './dtos/created.sdk-secret.dto';
+import { ListSdkSecretDto } from './dtos/list.sdk-secret.dto';
+import { RevokeSdkSecretDto } from './dtos/revoke.sdk-secret.dto';
 import { SdkSecretsService } from './sdk-secrets.service';
 
 @ApiTags('sdk-secrets')
@@ -50,6 +55,76 @@ export class SdkSecretsController {
           projectId: dto.projectId,
         },
       });
+      return result.value;
+    }
+
+    switch (result.error) {
+      case 'ProjectNotFound':
+        throw new UnauthorizedException({
+          code: 'ProjectNotFound',
+          message: 'Project not found',
+        });
+
+      case 'NotAProjectUser':
+        throw new UnauthorizedException({
+          code: 'NotAProjectUser',
+          message: 'You are not a member of this project',
+        });
+    }
+  }
+
+  @ApiUnauthorizedResponse({
+    description: 'You are not authorized to perform this action',
+  })
+  @RequireAuthMethod('user-token')
+  @Get('/listForProject/:projectId')
+  async listForProject(
+    @Req() req: UserAuthenticatedRequest,
+    @Param('projectId') projectId: string,
+  ): Promise<ListSdkSecretDto> {
+    const { user } = req;
+
+    const result = await this.sdkSecretsService.listForProject({
+      userId: user.id,
+      projectId: projectId,
+    });
+
+    if (result.ok) {
+      return result.value;
+    }
+
+    switch (result.error) {
+      case 'ProjectNotFound':
+        throw new UnauthorizedException({
+          code: 'ProjectNotFound',
+          message: 'Project not found',
+        });
+
+      case 'NotAProjectUser':
+        throw new UnauthorizedException({
+          code: 'NotAProjectUser',
+          message: 'You are not a member of this project',
+        });
+    }
+  }
+
+  @ApiUnauthorizedResponse({
+    description: 'You are not authorized to perform this action',
+  })
+  @RequireAuthMethod('user-token')
+  @Delete('/revokeById/:secretId')
+  async revokedById(
+    @Req() req: UserAuthenticatedRequest,
+    @Param('secretId') secretId: string,
+  ): Promise<RevokeSdkSecretDto> {
+    const { user } = req;
+
+    const result = await this.sdkSecretsService.revokeById({
+      userId: user.id,
+      secretId: secretId,
+    });
+
+    if (result.ok) {
       return result.value;
     }
 
